--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   },
   "dependencies": {
     "ink": "^0.4.1",
-    "ink-big-text": "^0.2.0"
+    "ink-big-text": "^0.2.0",
+    "ink-select-input": "^1.1.0",
+    "ink-text-input": "^1.1.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.0.0-beta.44",
