--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,21 @@
 {
+  "parser": "babel-eslint",
   "plugins": ["prettier"],
+  "ecmaFeatures": {
+    "modules": true,
+    "spread": true,
+    "restParams": true
+  },
+  "parserOptions": {
+    "ecmaVersion": 7,
+    "sourceType": "module"
+  },
+  "env": {
+    "node": true,
+    "es6": true
+  },
   "rules": {
-    "prettier/prettier": "error"
+    "prettier/prettier": "error",
+    "no-undef": "warn"
   }
 }
