--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@babel/core": "^7.0.0-beta.44",
     "@babel/node": "^7.0.0-beta.44",
     "@babel/preset-env": "^7.0.0-beta.44",
+    "babel-eslint": "^8.2.3",
     "babel-plugin-transform-react-jsx": "^6.24.1",
     "eslint": "^4.19.1",
     "eslint-plugin-prettier": "^2.6.0",
