--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "scripts": {
     "dev": "nodemon --no-colors --exec babel-node src",
     "build": "babel src --out-dir dist",
-    "start:hello": "node dist/hello.js",
-    "start:counter": "node dist/counter.js",
-    "start:todolist": "node dist/todolist.js"
+    "start:hello": "babel-node dist/hello.js",
+    "start:counter": "babel-node dist/counter.js",
+    "start:todolist": "babel-node dist/todolist.js"
   },
   "dependencies": {
     "ink": "^0.4.1",
@@ -20,6 +20,7 @@
     "@babel/cli": "^7.0.0-beta.44",
     "@babel/core": "^7.0.0-beta.44",
     "@babel/node": "^7.0.0-beta.44",
+    "@babel/plugin-proposal-class-properties": "^7.0.0-beta.44",
     "@babel/preset-env": "^7.0.0-beta.44",
     "babel-eslint": "^8.2.3",
     "babel-plugin-transform-react-jsx": "^6.24.1",
